added better history